--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
-name=mcp_can
-version=1.5.1
-author=coryjfowler
-maintainer=coryjfowler
-sentence=MCP_CAN Library
-paragraph=Adds support for Microchip CAN 2.0B protocol controllers (MCP2515, MCP25625, and similar)
+name=HMS_MCP_CAN
+version=1.0.0
+author=Hamas Saeed <hamasaeed888@gmail.com>
+maintainer=Hamas Saeed <hamasaeed888@gmail.com>
+sentence=Cross-platform MCP CAN library for embedded systems.
+paragraph=HMS_MCP_CAN provides cross-platform MCP CAN functionality for embedded systems.
 category=Communication
-url=https://github.com/coryjfowler/MCP_CAN_lib
+url=https://github.com/Hamas888/HMS_MCP_CAN
 architectures=*
+includes=HMS_MCP_CAN.h
